style.css
@import url("https://fonts.googleapis.com/css?family=Lato:300,400|Poppins:400,500,700|Caveat:300,400,800&display=swap");

body {
    margin: 0;
    padding: 0;
    overflow: hidden;
    background: #fff3b0;
    font-family: script, cursive;
    color: #fff3b0;
    /* Remove blue highlighting effect */
    -webkit-tap-highlight-color: transparent;
}

.content::after,
.content::before {
    clear: both;
}

._block {
    position: relative;
    height: 25vh;
    width: 100%;
    background: #f28482;
    display: flex;
    flex-direction: column;
    z-index: 2;
    justify-content: center;
    align-items: center;
    margin: 0;
    overflow: hidden;
    -webkit-transition: 0.3s;
    -moz-transition: 0.3s;
    -o-transition: 0.3s;
    -ms-transition: 0.3s;
    transition: 0.3s;
}

.content:active ._block {
    height: 22vh;
}

._block:nth-of-type(1) {
    background: #fff3b0;
    height: 29vh;
    justify-content: flex-end;
}

._block:nth-of-type(1) .outer-gifs {
    margin-bottom: 1rem;
}

._block:nth-of-type(2) {
    background: #9e2a2b;
    height: 21vh;
}

._block:nth-of-type(3) {
    background: #e09f3e;
    height: 21vh;
}

._block:nth-of-type(4) {
    background: #540b0e;
    height: 29vh;
    padding-top: 1rem;
    justify-content: flex-start;
}
.content.__open ._block {
    height: 0vh;
    padding: 0;
    margin: 0;
}

.content.__open ._block.__active {
    height: 100vh;
}

._content svg {
    width: 50%;
    top: -150px;
    opacity: 0;
}

.content.__open .__active ._content img {
    opacity: 1;
}

.outer-gifs {
    width: 80px;
    opacity: 1;
    transition: opacity 0.3s ease-in;
}

.content.__open ._content {
    opacity: 0;
}

.content.__open .outer-gifs {
    opacity: 0;
    height: 0px;
    margin: 0;
}

.content.__open h2 {
    opacity: 0;
    height: 0px;
}

.open-frame {
    width: 100%;
    height: 0vh;
    opacity: 0;
    transition: opacity 0.3s ease-in;
}

.f3-bg {
    background-image: url('f3.png');
    background-size: 100%;
}

.f4-bg {
    background-image: url('f4.png');
    background-size: cover;
    background-repeat: no-repeat;
    display: none;
    justify-content: center;
}

.venue {
    width: 100%;
    height: fit-content;
}

.content.__open .open-frame {
    opacity: 1;
    height: 100vh;
    max-height: 100vh;
    object-fit: cover;
}

h2 {
    margin: 0;
}

.blessings-text {
    color: #540b0e;
}

._block.__active .open-frame {
    display: flex;
}

.container {
    align-self: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-left: 1rem;
    min-width: 90%;
}

.photo {
    position: relative;
    width: 170px;
    height: 170px;
    overflow: hidden;
    transition: outline-offset 0.4s ease;
    cursor: pointer;
    z-index: 1;
}

.photo img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    aspect-ratio: 1;
    transition: .4s;
    cursor: pointer;
}

.text {
    position: relative;
    top: -9rem;
    right: -12rem;
    width: 180px;
    padding: 10px;
    color: #e09f3e;
    font-size: 17px;
    line-height: 1.4;
    transition: right 0.4s ease;
    opacity: 0;
    transition: opacity 2s ease-in-out;
}

.show {
    opacity: 1;
}

.photo.active img {
    outline: none;
    outline-offset: 0px;
}

b {
    font-size: 21px;
    text-decoration: underline;
}

.f3-container {
    width: 1142px;
    margin: 0 auto;
}


body {
    background-color: #000;
}


.f3-item {
    -ms-flex-preferred-size: calc(33.33333% - 30px);
    flex-basis: calc(33.33333% - 30px);
    margin: 25px 15px;
    overflow: hidden;
    border-radius: 28px;
    display: block;
    padding: 30px 20px;
    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;

    background-size: cover;
    overflow: hidden;
    position: relative;
}

.photo-1 {
    background-image: url('mehndi.jpeg');
}

.photo-2 {
    background-image: url('haldi.jpeg');
}

.photo-3 {
    background-image: url('sangeet.jpeg');
}

.f3-item-link:hover,
.f3-item-link:hover .item_date {
    text-decoration: none;

    color: #FFF;
}

.item_title {
    min-height: 87px;
    margin: 0 0 25px;

    overflow: hidden;

    font-weight: bold;
    font-size: 30px;
    color: #FFF;
    opacity: 0;

    z-index: 2;
    position: relative;
}

.item_date-box {
    font-size: 18px;
    color: #FFF;
    opacity: 0;
    z-index: 2;
    position: relative;
}

.f3-item-bg {
    height: 128px;
    width: 128px;

    z-index: 1;
    position: absolute;
    top: -75px;
    right: -75px;

    border-radius: 50%;

    -webkit-transition: all .5s ease;
    -o-transition: all .5s ease;
    transition: all .5s ease;
}

.color1 {
    background-image: linear-gradient(90deg, #254441, #252f22);
}

.color2 {
    background-image: linear-gradient(90deg, #FAA916, #F6A135);
}

.color3 {
    background-image: linear-gradient(90deg, #cb6ce6, #9e0d63);
}

.head {
    text-decoration: underline;
    font-size: 28px;
}

@media only screen and (max-width: 979px) {
    .f3-item {
        -ms-flex-preferred-size: calc(50% - 30px);
        flex-basis: calc(50% - 30px);
    }

    .item_title {
        font-size: 24px;
        opacity: 0;
    }
}

@media only screen and (max-width: 767px) {
    .f3-container {
        width: 96%;
    }

}

@media only screen and (max-width: 639px) {
    .f3-item {
        -ms-flex-preferred-size: 100%;
        flex-basis: 100%;
    }

    .item_title {
        min-height: 72px;
        line-height: 1;
        opacity: 0;
        font-size: 24px;
    }

    .f3-item-link {
        padding: 22px 40px;
    }

}


.box {
    position: relative;
    color: white;
    display: flex;
    justify-content: center;
    flex-direction: column;
}

.box .title {
    width: 100%;
    position: relative;
    justify-content: center;
    top: -18%;
}

.box .title .block {
    width: 0%;
    height: 110px;
    background: #ffb510;
    position: absolute;
    display: flex;
}

.animateBlock {
    animation: mainBlock 2s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
}

.box .title h1 {
    font-family: "Caveat";
    color: #fff;
    font-size: 82px;
    text-align: center;
    animation-delay: 1.6s;
    opacity: 0;
    display: flex;
    align-items: baseline;
    margin: 0 auto;
    position: relative;
}

.animateH1 {
    -webkit-animation: mainFadeIn 2s forwards;
    -o-animation: mainFadeIn 2s forwards;
    animation: mainFadeIn 2s forwards;
}

.box .role {
    width: 100%;
    position: relative;
    justify-content: center;
    display: flex;
    flex-direction: column;
    height: 30px;
    margin-block-end: -3rem;
    background-color: rgba(0, 0, 0, 0.67);
    /* Black color with 50% opacity */
    border-radius: 5px;
    height: fit-content;
    padding: 1rem 0;
}

.box .role .block {
    width: 0%;
    height: 35px;
    background: #e91e63;
    position: absolute;
    animation-delay: 2s;
    display: flex;
    top: 15px;
}

.roleBlock {
    animation: mainBlock 2s cubic-bezier(0.74, 0.06, 0.4, 0.92) forwards;
}

.box .role p {
    animation-delay: 3.2s;
    opacity: 0;
    font-weight: 400;
    font-family: "Lato";
    color: #ffffff;
    font-size: 12px;
    text-align: center;
    text-transform: uppercase;
    font-size: 32px;
    letter-spacing: 5px;
    margin: 0 auto;
}

.wed-date {
    font-family: "Caveat";
    font-weight: 400;
    text-align: center;
    opacity: 0;
    animation-delay: 3.2s;
    font-size: 30px;
}

.roleAnimate {
    animation: mainFadeIn 2s forwards;
}

.role span {
    animation-delay: 3.2s;
    opacity: 0;
    position: relative;
    align-self: center;
    font-size: 20px;
    text-align: center;
}

@keyframes mainBlock {
    0% {
        width: 0%;
        left: 0;
    }

    50% {
        width: 90%;
        left: 5%;
    }

    100% {
        width: 0;
        left: 95%;
    }
}

@keyframes mainFadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 1;
    }
}

@keyframes secFadeIn {
    0% {
        opacity: 0;
    }

    100% {
        opacity: 0.8;
    }
}

footer {
    width: 350px;
    height: 80px;
    background: #ffb510;
    position: absolute;
    right: 0;
    bottom: -80px;
    display: flex;
    justify-content: center;
    align-items: center;
    animation: top 0.8s forwards;
    animation-delay: 4s;
}

footer span {
    display: flex;
    align-items: center;
    justify-content: center;
    font-size: 12px;
    color: #232323;
    font-family: "Poppins";
}

footer span i {
    margin-right: 25px;
    font-size: 22px;
    color: #232323;
    animation: icon 2s forwards;
    animation-delay: 4s;
    opacity: 0;
}

@keyframes top {
    0% {
        opacity: 0;
        bottom: -80px;
    }

    100% {
        opacity: 1;
        bottom: 0px;
    }
}

@keyframes icon {
    0% {
        opacity: 0;
        transform: scale(0);
    }

    50% {
        opacity: 1;
        transform: scale(1.3) rotate(-2deg);
    }

    100% {
        opacity: 1;
        bottom: 0px;
    }
}

